# tavily

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  WORKFLOW.md  analyze_results.py  collect_failed_urls.py  compare_stealth_runs.py  pyproject.toml  requirements.txt  run.sh  run_pipeline.py
.github/workflows/: ci.yml
.sdd/: CODING_RULES.md  agent.md  architect.md  best_practices.md  captcha_detection.md  config.json  project.md  stealth.md
.sdd/raw/: assignment.md
data/: stats.jsonl
docs/: index.html  story.css  story.html  story.js
docs/data/: run_summary.json
tavily_scraper/: __init__.py  canary.py  cli.py
tavily_scraper/config/: __init__.py  constants.py  env.py  proxies.py
tavily_scraper/core/: __init__.py  errors.py  models.py  robots.py  scheduler.py
tavily_scraper/notebooks/: tavily_assignment.ipynb
tavily_scraper/pipelines/: __init__.py  batch_runner.py  browser_fetcher.py  fast_http_fetcher.py  router.py  shard_runner.py
tavily_scraper/stealth/: __init__.py  advanced.py  asset_loader.py  behavior.py  captcha.py  config.py  core.py  device_profiles.py  session.py
tests/: __init__.py  test_browser_fetcher.py  test_captcha.py  test_config.py  test_e2e_basic.py  test_e2e_batch_runner.py  test_fast_http_fetcher.py  test_io.py  test_metrics.py  test_models.py  test_parsing.py  test_robots.py  test_router.py  test_scheduler.py  test_stealth_behavior.py  test_stealth_config.py  test_stealth_consistency.py  test_stealth_core.py  test_stealth_network.py  test_stealth_region.py  test_stealth_session.py  verification_suite.py
(+44 files in other folders)
